syntax = "proto3";


import "google/protobuf/wrappers.proto";
import "user.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = false;
option java_package = "applicationtier.protobuf";

message RequestProtoObj {
  int64 requestId = 1;
  bool isApproved = 2;
  string status = 3;
  int32 amount = 4;
  string comment = 5;
  UserProtoObj payer = 6;
}

message RequestProtoObjList{
  repeated RequestProtoObj requests= 1;
}

service RequestProtoService{
  rpc CreateRequestAsync(RequestProtoObj) returns (RequestProtoObj);
  rpc FetchAllRequestsAsync(google.protobuf.Empty) returns (RequestProtoObjList);
  rpc FetchRequestByIdAsync(google.protobuf.Int32Value) returns (RequestProtoObj);
  rpc FetchRequestByUsername(google.protobuf.StringValue) returns (RequestProtoObj);
  rpc UpdateRequestAsync(RequestProtoObj) returns (RequestProtoObj);
  rpc DeleteRequestAsync(google.protobuf.Int64Value) returns (google.protobuf.BoolValue);
}